--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BusinessMind.ai</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        body, button, input {
+            font-family: "Helvetica Neue", Courier, sans-serif; /* Updated the font */
             margin: 0;
             padding: 0;
             display: flex;
@@ -24,13 +24,12 @@
         }
 
         .description {
-            width: 300px; /* Box width set to three times the logo width */
+            width: 400px; /* Box width set to four times the logo width */
             margin: 0 auto;
             padding: 20px;
             box-sizing: border-box;
             text-align: center;
-            border: 1px solid #ccc; /* Border color for the box, adjust as needed */
-            background-color: #f9f9f9; /* Background color for the box */
+            background-color: transparent; /* Background made transparent */
         }
 
         .tell-me-more-btn {
@@ -81,3 +80,4 @@
     </script>
 </body>
 </html>
+
