--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BusinessMind.ai</title>
     <style>
         body, button, input {
-            font-family: "Helvetica Neue", Courier, sans-serif; /* Updated the font */
+            font-family: "Helvetica Light", "Courier New", sans-serif; /* Updated the font */
             margin: 0;
             padding: 0;
             display: flex;
@@ -18,8 +18,8 @@
         }
 
         .logo-icon {
-            width: 100px; /* Set the size of the logo */
-            height: 100px;
+            width: 150px; /* Set the size of the logo */
+            height: 150px;
             margin-bottom: 20px;
         }
 
@@ -59,7 +59,7 @@
     <img src="blob.png" alt="BusinessMind.ai Logo" class="logo-icon">
     
     <div class="description">
-        Harnessing artificial intelligence to streamline complex web and mobile applications for businesses, allowing revenue to flow through natural language.
+        Replacing complex web and mobile applications for businesses with artificially intelligent agents, allowing revenue to flow through natural language.
     </div>
     
     <a href="mailto:humans@businessmind.ai" class="tell-me-more-btn">Tell Me More</a>
