--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <img src="blob.png" alt="BusinessMind.ai Logo" class="logo-icon">
     
     <div class="description">
-        Replacing complex web and mobile applications for businesses with artificially intelligent agents, allowing revenue to flow through natural language.
+        Replacing complex web and mobile applications with artificially intelligent agents, allowing revenue to flow through natural language.
     </div>
     
     <a href="mailto:humans@businessmind.ai" class="tell-me-more-btn">Tell Me More</a>
