--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
             mix-blend-mode: multiply; /* Blends the shadow with the background */
             z-index: 9999;
         }
+
+ripple {
+            position: absolute;
+            border-radius: 50%;
+            background: rgba(0, 0, 255, 0.5);
+            transform: scale(0);
+            animation: ripple-animation 0.6s linear;
+        }
+
+        @keyframes ripple-animation {
+            to {
+                transform: scale(4);
+                opacity: 0;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -77,6 +93,20 @@
             cursorShadow.style.left = (mouseX + shadowOffset) + 'px';
             cursorShadow.style.top = (mouseY + shadowOffset) + 'px';
         });
+
+document.body.addEventListener('mousemove', function(e) {
+    var ripple = document.createElement('div');
+    ripple.className = 'ripple';
+    document.body.appendChild(ripple);
+    ripple.style.width = ripple.style.height = '20px';
+    ripple.style.top = e.pageY + 'px';
+    ripple.style.left = e.pageX + 'px';
+
+    ripple.addEventListener('animationend', function() {
+        ripple.parentElement.removeChild(ripple);
+    });
+});
+
     </script>
 </body>
 </html>
