--- a/index.html
+++ b/index.html
@@ -43,21 +43,16 @@
             text-decoration: none; /* Removes underline from links */
         }
 
-ripple {
-            position: absolute;
+        .cursor-shadow {
+            width: 20px;
+            height: 20px;
             border-radius: 50%;
-            background: rgba(0, 0, 255, 0.5);
-            transform: scale(0);
-            animation: ripple-animation 0.6s linear;
+            background: rgba(0, 0, 0, 0.2); /* Shadow color */
+            position: fixed;
+            pointer-events: none; /* Allows clicking through the shadow */
+            mix-blend-mode: multiply; /* Blends the shadow with the background */
+            z-index: 9999;
         }
-
-        @keyframes ripple-animation {
-            to {
-                transform: scale(4);
-                opacity: 0;
-            }
-        }
-
     </style>
 </head>
 <body>
@@ -72,19 +67,16 @@ ripple {
     <div class="cursor-shadow"></div>
 
     <script>
-document.body.addEventListener('mousemove', function(e) {
-    var ripple = document.createElement('div');
-    ripple.className = 'ripple';
-    document.body.appendChild(ripple);
-    ripple.style.width = ripple.style.height = '20px';
-    ripple.style.top = e.pageY + 'px';
-    ripple.style.left = e.pageX + 'px';
-
-    ripple.addEventListener('animationend', function() {
-        ripple.parentElement.removeChild(ripple);
-    });
-});
-
+        const cursorShadow = document.querySelector('.cursor-shadow');
+        
+        document.addEventListener('mousemove', (e) => {
+            // Offset the shadow position slightly from the cursor
+            const shadowOffset = 20;
+            const mouseX = e.clientX;
+            const mouseY = e.clientY;
+            cursorShadow.style.left = (mouseX + shadowOffset) + 'px';
+            cursorShadow.style.top = (mouseY + shadowOffset) + 'px';
+        });
     </script>
 </body>
 </html>
